--- a/app/src/main/res/layout/admin_image_card.xml
+++ b/app/src/main/res/layout/admin_image_card.xml
@@ -13,33 +13,41 @@
         android:layout_margin="4dp"
         app:cardCornerRadius="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/admin_image_card_dots"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@tools:sample/avatars"
-                app:layout_constraintBottom_toTopOf="@+id/admin_image_card_pic"
-                app:layout_constraintStart_toEndOf="@+id/admin_image_card_pic"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/triple_dot" />
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/admin_image_card_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/coustard"
+                    android:paddingStart="5dp"
+                    android:text="5pm 20 February 2024" />
+
+                <ImageView
+                    android:id="@+id/admin_image_card_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_toEndOf="@+id/admin_image_card_date"
+                    android:src="@drawable/triple_dot" />
+            </RelativeLayout>
 
             <ImageView
-                android:id="@+id/admin_image_card_pic"
-                android:layout_width="103dp"
-                android:layout_height="107dp"
-                android:layout_margin="5dp"
-                android:src="@tools:sample/avatars"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0"
-                app:srcCompat="@drawable/qr_emoji" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:id="@+id/admin_image_card_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/pizzanight" />
+
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
