--- a/app/src/main/res/layout/admin_view_image_page.xml
+++ b/app/src/main/res/layout/admin_view_image_page.xml
@@ -14,7 +14,7 @@
             android:id="@+id/admin_view_image_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/back_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
