--- a/app/src/main/res/layout/admin_view_image_page.xml
+++ b/app/src/main/res/layout/admin_view_image_page.xml
@@ -42,10 +42,17 @@
         android:layout_weight="1"
         app:cardCornerRadius="8dp">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/admin_view_image_recycler"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/admin_view_image_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
