--- a/app/src/main/res/layout/view_signups_activity.xml
+++ b/app/src/main/res/layout/view_signups_activity.xml
@@ -4,18 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbarCheckins"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        android:background="?attr/colorPrimary"-->
-<!--        app:titleTextColor="@android:color/white"-->
-<!--        app:layout_alignParentTop="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        />-->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarSignups"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:titleTextColor="@android:color/white"
+            app:titleMarginStart="100dp"
+            app:titleMarginEnd="32dp"
+
+            app:title="Signups for your event"
+            app:layout_alignParentTop="true"
+            android:layout_alignParentTop="true"
+            />
+<!--132dp just a random # I came up with to center title    -->
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/attendee_checkin_"
+        android:layout_below="@id/toolbarSignups"
+        android:id="@+id/signups_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
@@ -24,24 +30,24 @@
         android:visibility="visible"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="16dp"
-        tools:listitem="@layout/attendee_checkin_item" />
+        tools:listitem="@layout/signup_item_card" />
 
     <TextView
-        android:id="@+id/emptyTextView"
+        android:id="@+id/emptyTextView4Signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No data available"
+        android:text="No signups yet!"
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/extended_fab"
+        android:id="@+id/back_fb_signups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
         android:text="Back"
-         />
+        />
 
 </RelativeLayout>
