--- a/app/src/main/res/layout/view_signups_activity.xml
+++ b/app/src/main/res/layout/view_signups_activity.xml
@@ -10,14 +10,13 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:titleTextColor="@android:color/white"
-            app:titleMarginStart="100dp"
+            app:titleMarginStart="40dp"
             app:titleMarginEnd="32dp"
-
+            app:navigationIcon="@drawable/back"
             app:title="Signups for your event"
 
             android:layout_alignParentTop="true"
             />
-<!--132dp just a random # I came up with to center title    -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@id/toolbarSignups"
@@ -40,14 +39,6 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/back_fb_signups"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        android:text="Back"
-        />
+
 
 </RelativeLayout>
