--- a/app/src/main/res/layout/signup_item_card.xml
+++ b/app/src/main/res/layout/signup_item_card.xml
@@ -9,8 +9,7 @@
     android:layout_marginHorizontal="10dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp"
-    android:id="@+id/signup_card"
-    android:clickable="true">
+    android:id="@+id/signup_card">
 
 
 
