Update UI pages from Activity to Fragment structure
Transformed EventExplore and EventOrganized pages from Activity classes to Fragment classes. Menu item ID mislabeled as 'icon' has been corrected. Removed redundant Bottom Navigation View codes, navigation now managed within MainActivity. This refactoring enhances navigation and layout flexibility, while eliminating redundant codes for improved maintainability.

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,7 +13,7 @@
         android:title="Explore" />
 
     <item
-        android:id="@+id/organized_menu_icon"
+        android:id="@+id/organized_menu_item"
         android:enabled="true"
         android:icon="@drawable/organized_icon"
         android:title="Organized" />
