Fixed spacing issues in the recycler view

--- a/app/src/main/res/layout/admin_image_card.xml
+++ b/app/src/main/res/layout/admin_image_card.xml
@@ -2,25 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/admin_image_card"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_margin="4dp"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/admin_image_card_date"
@@ -46,6 +46,7 @@
                 android:id="@+id/admin_image_card_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/pizzanight" />
 
         </LinearLayout>
