--- a/app/src/main/res/layout/view_attendee_checkin.xml
+++ b/app/src/main/res/layout/view_attendee_checkin.xml
@@ -4,17 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbarCheckins"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        android:background="?attr/colorPrimary"-->
-<!--        app:titleTextColor="@android:color/white"-->
-<!--        app:layout_alignParentTop="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        />-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarCheckIn"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:titleTextColor="@android:color/white"
+        app:titleMarginStart="40dp"
+        app:titleMarginEnd="32dp"
+        app:navigationIcon="@drawable/back"
+        app:title="Checkins for your event"
+
+        android:layout_alignParentTop="true"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/toolbarCheckIn"
         android:id="@+id/attendee_checkin_"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,14 +39,14 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/extended_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        android:text="Back"
-         />
+<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--        android:id="@+id/extended_fab"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_margin="16dp"-->
+<!--        android:text="Back"-->
+<!--         />-->
 
 </RelativeLayout>
