--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -19,20 +19,20 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/profile_card_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/triple_dot"
-                app:layout_constraintBottom_toTopOf="@+id/imageView3"
+                app:layout_constraintBottom_toTopOf="@+id/profile_card_image"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/profile_card_image"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/triple_dot" />
 
             <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="118dp"
-                android:layout_height="102dp"
+                android:id="@+id/profile_card_image"
+                android:layout_width="150dp"
+                android:layout_height="200dp"
                 android:layout_margin="20dp"
                 android:src="@drawable/profile_circle"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +51,7 @@
                 android:text="Profile Name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                app:layout_constraintTop_toBottomOf="@+id/profile_card_image" />
 
             <TextView
                 android:id="@+id/profile_card_profile_id"
@@ -83,7 +83,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/profile_card_homepage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
