--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -25,14 +25,16 @@
                 android:src="@drawable/triple_dot"
                 app:layout_constraintBottom_toTopOf="@+id/profile_card_image"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/profile_card_image"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/triple_dot" />
 
             <ImageView
                 android:id="@+id/profile_card_image"
-                android:layout_width="150dp"
-                android:layout_height="200dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:src="@drawable/profile_circle"
                 app:layout_constraintBottom_toBottomOf="parent"
