--- a/app/src/main/res/menu/admin_image_card_menu.xml
+++ b/app/src/main/res/menu/admin_image_card_menu.xml
@@ -7,5 +7,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/delete_icon"
-        android:title="Delete photo" />
+        android:title="Delete" />
 </menu>
