Fixed event loading, so getting event size doesn't make program crash

--- a/app/src/main/res/layout/admin_event_card.xml
+++ b/app/src/main/res/layout/admin_event_card.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -19,10 +19,11 @@
                 android:id="@+id/admin_event_card_event_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="36dp"
                 android:fontFamily="@font/coustard"
                 android:text="Event Name"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/admin_event_card_menu"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,11 +48,13 @@
                 android:id="@+id/admin_event_card_event_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="68dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/coustard"
+                android:gravity="center"
                 android:text="Event ID"
                 android:textColor="#8A8A8A"
                 android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_poster" />
 
@@ -59,10 +62,10 @@
                 android:id="@+id/admin_event_card_event_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="56dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/coustard"
                 android:text="Event Date"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_id" />
 
@@ -70,10 +73,10 @@
                 android:id="@+id/admin_event_card_event_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/coustard"
                 android:text="Location"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_date" />
 
@@ -102,6 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="0000"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/admin_event_card_registered"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_location" />
 
@@ -112,6 +116,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="5dp"
                 android:text="0000"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/admin_event_card_attending"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_registered_num" />
 
@@ -130,6 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Organized by: John Doe"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_description" />
 
