--- a/app/src/main/res/layout/user_notification_list.xml
+++ b/app/src/main/res/layout/user_notification_list.xml
@@ -15,6 +15,7 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/coustard"
         android:gravity="center"
         android:text="Notifications"
         android:textColor="@color/md_theme_onPrimaryFixed"
